fixed spacing issues on page 1

--- a/TaggingWebApp/static/style-app.css
+++ b/TaggingWebApp/static/style-app.css
@@ -1,14 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 
-body {
+html, body {
+    height: 100%;
+    margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-    margin: 0;
     font-family: 'Manrope', sans-serif;
 }
+.main-content {
+    flex: 1; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 70px;
+}
+
 
 .square-containers {
     display: flex;
@@ -27,11 +33,19 @@ body {
 }
 
 .header-text {
-    margin-bottom: 0px; 
+    margin-top: 80px; 
+    text-align: center;
     font-size: 20px;
     font-weight: bold;
-    text-align: center;
 }
+
+.footer {
+    background-color: #f5f5f5;
+    text-align: center;
+    padding: 10px;
+}
+
+
 
 .action-button {
     margin-top: 50px; 
@@ -58,6 +72,17 @@ img.logo {
       top: 10px;
       left: 15px;
   }
+
+.logo {
+    width: 150px;
+    height: auto;
+}
+.logo-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 10px; 
+}
 
 .arrow img{
     width: 60px;
@@ -109,6 +134,13 @@ img.logo {
     cursor: pointer; 
 }
 
+#startButton {
+    display: block;
+    margin: 50px auto 0 auto; 
+    text-align: center;
+}
+
+
 .submit-button:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
@@ -121,14 +153,4 @@ img.logo {
     border: none;
 }
 
-/* this is what hides the Go to Step 2 button in step1.html*/
-#step2Button {
-    display: none;
-}
 
-.footer { 
-    position: absolute; 
-    bottom: 0; 
-    left: 0; 
-    z-index: 10;
-}
